--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build_test:
+  build_unit_test:
 
     runs-on: ubuntu-latest
 
@@ -23,3 +23,5 @@ jobs:
       run: npm install
     - name: Run unit tests
       run: npm run test:unit
+    - name: Display Softuni username
+      run: echo "steffy96"
