--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build_unit_test:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -25,3 +24,20 @@ jobs:
       run: npm run test:unit
     - name: Display Softuni username
       run: echo "steffy96"
+
+  ui_test:
+    runs-on: ubuntu-latest
+    needs: build_unit_test
+
+    steps:
+    - name: Checkout the repository on the machine
+      uses: actions/checkout@v4
+    - name: Use Node.js version 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install the dependencies
+      run: npm install
+    - name: Run UI tests
+      run: npm run test:ui
