--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build_unit_test:
+  build-unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,9 +25,9 @@ jobs:
     - name: Display Softuni username
       run: echo "steffy96"
 
-  ui_test:
+  ui-test:
     runs-on: ubuntu-latest
-    needs: build_unit_test
+    needs: build-unit-test
 
     steps:
     - name: Checkout the repository on the machine
@@ -39,5 +39,7 @@ jobs:
         cache: 'npm'
     - name: Install the dependencies
       run: npm install
+    - name: Install Playwright browsers
+      run: npx playwright install
     - name: Run UI tests
       run: npm run test:ui
