--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,5 +41,7 @@ jobs:
       run: npm install
     - name: Install Playwright browsers
       run: npx playwright install
+    - name: Start the application
+      run: npm start &
     - name: Run UI tests
       run: npm run test:ui
