--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,3 +45,14 @@ jobs:
       run: npm start &
     - name: Run UI tests
       run: npm run test:ui
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: ui-test
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+          wait-for-success: true
